# betadist

./: CMakeLists.txt  CMakePresets.json  README.md  betadist.sln
betadist/: betadist.vcxproj  src.cpp
